--- a/.gitignore
+++ b/.gitignore
@@ -288,5 +288,5 @@ poetry.toml
 
 # LSP config files
 pyrightconfig.json
-
+certs/
 # End of https://www.toptal.com/developers/gitignore/api/pycharm+all,python
