--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,14 @@ sqlalchemy = "^2.0.30"
 psycopg = "^3.1.19"
 alembic = "^1.13.1"
 pydantic-settings = "^2.3.1"
+fastapi-users = {extras = ["jwt"], version = "^13.0.0"}
+fastapi-users-db-sqlalchemy = "^6.0.1"
+fastapi-users-db-beanie = "^3.0.0"
+jose = {extras = ["jwt"], version = "^1.0.0"}
+passlib = "^1.7.4"
+pyjwt = {extras = ["crypto"], version = "^2.8.0"}
+jwt = "^1.3.1"
+python-jose = "^3.3.0"
 
 
 [tool.poetry.group.dev.dependencies]
